@@ -1204,21 +1204,7 @@ parentsTaggerRef
 
 
 \backslash
-sexTaggerRef
-\end_layout
-
-\begin_layout Plain Layout
-
-
-\backslash
-affectionTaggerRef
-\end_layout
-
-\begin_layout Plain Layout
-
-
-\backslash
-infoTaggerRef
+pedigreeTaggerRef
 \end_layout
 
 \begin_layout Plain Layout
