@@ -15,6 +15,8 @@ version 0.9.0 - Not released, available at https://simupop.svn.sourceforge.net/s
   - CHG: Move operators pySubset(), randomSample(), caseControlSample()
 		and affectedSibpairSample from simuPOP core to simuUtil.py.
 		Remove src/sampler.*.
+  - CHG: Remove infoTagger, sexTagger and affectionTagger and will
+		replace them by pedigreeTagger.
 
 version 0.8.9 - tagged, but not publically released (rev 1948).
   - DOC: Adjust reference output for simuPOP classes.
